02-rollouts/canary/0-traefik/dov-bear.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  namespace: api-ns
  labels:
    app: dov-bear
    name: dov-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dov-bear
      name: dov-po
  template:
    metadata:
      name: dov-po
      labels:
        app: dov-bear
        name: dov-po
    spec:
      containers:
      - name: dov-container
        image: chukmunnlee/dov-bear:v5
        imagePullPolicy: IfNotPresent
        ports:
        - name: dov-port 
          containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: api-ns
spec:
  type: ClusterIP
  selector:
    app: dov-bear
    name: dov-po
  ports:
  - port: 3000
    targetPort: dov-port
