02-rollouts/canary/0-traefik/apiv1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api-ns
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
    version: v1
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-ro
  namespace: api-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
      name: api-po
      version: v1

  template:
    metadata:
      labels:
        app: api
        name: api-po
        version: v1
    spec:
      containers:
      - name: app-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ing
  namespace: api-ns
spec:
  ingressClassName: traefik 
  rules:
  - host: api-192.168.39.140.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-svc
            port:
              number: 3000
